src/test/ui/parser/bounds-lifetime-1.stderr
error: expected one of `,`, `:`, or `>`, found `'b`
  --> $DIR/bounds-lifetime-1.rs:1:17
   |
LL | type A = for<'a 'b> fn();
   |                 ^^ expected one of `,`, `:`, or `>` here

error: aborting due to previous error

