src/test/ui/parser/bounds-lifetime-1.rs
type A = for<'a 'b> fn(); //~ ERROR expected one of `,`, `:`, or `>`, found `'b`

fn main() {}
